# subnucleondiffraction

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  cross_section.py  examplecode.cpp  filelist.m  h2.density  photon_kT_Isfun_LHC  photon_kT_Isfun_RHIC
.github/workflows/: cmake-single-platform.yml
SubNucleon diffraction.xcodeproj/: project.pbxproj
SubNucleon diffraction.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
SubNucleon diffraction.xcodeproj/xcuserdata/heikki.xcuserdatad/xcschemes/: SubNucleon diffraction.xcscheme  xcschememanagement.plist
jimwlkfit/: genplot_chisqr_uv.py
libColorDipole/: Makefile  README
libColorDipole/inc/: mbutil.inc  qcdnum.inc  qcdspl.inc  qfast9.inc  qfast9_old.inc  qgrid2.inc  qibit4.inc  qluns1.inc  qmaps8.inc  qpars6.inc  qpdfs7.inc  qsflg4.inc  qsnam3.inc  qstor7.inc  qvers1.inc  qwtab7.inc
libColorDipole/src/: CMakeLists.txt  Test_Dipole.f  bmats.f  debug.f  gluonEvolve.f  gluonEvolve.f~  mbits.f  mchar.f  obsolete.f  ome.f  pij_lo.f  pij_nlo.f  pij_nlo.f_orig  qcdalf.f  qcdcvol.f  qcdevol.f  qcdfast.f  qcdgrd.f  qcdini.f  qcdpdf.f  qcdspl.f  qcdstore.f  qcdthrs.f  qcdutil.f  qcdwfun.f  qcdwgtq.f  qcdwgtu.f  qpolint.f  sigmaDipole.c  sigma_dipole.f  store.f  usrcvol.f  usrerr.f  usrevol.f  usrfast.f  usrgrd.f  usrini.f  usrpdf.f  usrwgt.f  utils.f  (+2 more)
pb-den/: normalized_rho_values.txt  pb-den.py  pbdensities.ipynb
scott_sampler/: sampler.py
script/: UPC_diff_cohenrent_cuba.cpp  UPC_diff_incohenrent_cuba.cpp
spectra/: genplot_incoh_proton.py  genplot_incoh_proton_bp_bq.py  genplot_proton.py  genplot_proton_coh_incoh_ratio.py  genplot_proton_spectra.py  genplot_ratio.py  genplot_spectra_comparison.py
src/: CMakeLists.txt  diffraction.cpp  diffraction.hpp  dipole.cpp  dipole.hpp  dis.cpp  dis.hpp  dvcs_photon.cpp  dvcs_photon.hpp  gaus_lc.cpp  gaus_lc.h  gauss_boost.cpp  gauss_boost.hpp  gdist_dglap.cpp  gdist_dglap.hpp  gitsha1.cpp.in  gitsha1.h  interpolation.cpp  interpolation.hpp  ipglasma.cpp  ipglasma.hpp  ipsat_nucleons.cpp  ipsat_nucleons.hpp  ipsat_proton.cpp  ipsat_proton.hpp  main.cpp  nrqcd_wf.cpp  nrqcd_wf.hpp  nucleons.cpp  nucleons.hpp  qcd.cpp  qcd.hpp  smooth_ws_nuke.cpp  smooth_ws_nuke.hpp  subnucleon_config.cpp  subnucleon_config.hpp  test.cpp  test_interpolation.cpp  vector.cpp  vector.hpp  (+6 more)
src/mz_ipsat/: dipoleamplitude.cpp  dipoleamplitude.hpp
src/mz_ipsat/dglap_cpp/: AlphaStrong.cpp  AlphaStrong.h  EvolutionLO.cpp  EvolutionLO.h  EvolutionLO_nocoupling.cpp  EvolutionLO_nocoupling.h
tools/: CMakeLists.txt  amplitude_bline.cpp  average_amplitude.cpp  average_baryon.cpp  average_spectra.py  b_r_angle.cpp  baryon.cpp  baryon_triangle.cpp  basis_expansion.cpp  dipxs_intb.cpp  dipxs_intb.hpp  f2fit.cpp  husimi.cpp  ipsatnucleusplot.py  ipsatprotonplot.py  modified_ipsat.cpp  plothisto.py  proton_size.cpp  sample_color_charges.cpp  sample_color_charges.hpp  satscale.cpp  sigmar_chisqr.py  spectra.py  tabulate_b_r_angle.cpp  tabulate_cos2phimomenta.cpp  wigner.cpp  wigner_coef_rint.cpp
